--- a/style.css
+++ b/style.css
@@ -5,3 +5,12 @@
 .image-container img:hover {
     transform: scale(1.2);
 }
+.btn-1{
+    height: 50px;
+    background-color: white;
+    border-color: black;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 15px;
+    padding: 15px 50px;
+  }
