--- a/style.css
+++ b/style.css
@@ -14,3 +14,23 @@
     font-size: 15px;
     padding: 15px 50px;
   }
+    
+.footer{
+    padding-top: 130px;
+    padding-bottom: 150px;
+    background-color:#242424 ;
+    width: 1300px;
+}
+.footer h2{
+    font-weight: 800;
+    color: white;
+}
+.footer i{
+    color: #F4F4F4;
+    background: #242424;
+    border-radius: 100%;
+
+}
+li{
+  list-style-type: none;
+}
