--- a/style.css
+++ b/style.css
@@ -5,21 +5,38 @@
 .image-container img:hover {
     transform: scale(1.2);
 }
-.btn-1{
-    height: 50px;
-    background-color: white;
-    border-color: black;
-    border-radius: 5px;
-    font-weight: 700;
-    font-size: 15px;
-    padding: 15px 50px;
-  }
+
+
+  .btn {
+  background-color: white; 
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.btn-1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid black;
+}
+
+.btn-1:hover {
+  background-color: black;
+  color: white;
+}
     
 .footer{
-    padding-top: 130px;
-    padding-bottom: 150px;
+  padding-top: 80px;
     background-color:#242424 ;
-    width: 1300px;
+    width: 100%;
+      height: 400px;
 }
 .footer h2{
     font-weight: 800;
